# app_rs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  mobile.toml
res/: hiq.css  styles.css
src/: about.rs  add_account.rs  app.rs  dash.rs  lib.rs  main.rs  settings.rs
