[package]
name = "onlivfe_app"
version = "0.1.0"
description = "Onlivfe's Rust native app"
authors = ["ljoonal"]
license = "AGPL-3.0-or-later"
homepage = "https://onlivfe.com"
repository = "https://github.com/onlivfe/core"
categories = ["games"]
keywords = [
	"onlivfe",
	"social_vr",
	"social_platform",
	"social_network",
	"social",
]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["dioxus-desktop"]
web = ["dioxus-web"]
mobile = ["mobile-entry-point"]

[dependencies]
onlivfe = { path = "../core/onlivfe" }
onlivfe_wrapper = { path = "../core/onlivfe_wrapper" }
onlivfe_cache_store = { path = "../core/onlivfe_cache_store" }
strum = { version = "0.24.1" }

dioxus = "0.3"
dioxus-router = "0.3"
dioxus-desktop = { version = "0.3", optional = true }
dioxus-web = { version = "0.3.1", optional = true }
mobile-entry-point = { version = "0.1.0", optional = true }

[profile.release]
# Optimizing mostly for size.
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
