[package]
name = "app"
version = "0.1.0"
description = "Onlivfe's Rust native app"
authors = ["ljoonal"]
license = "AGPL-3.0-or-later"
homepage = "https://onlivfe.com"
repository = "https://github.com/onlivfe/core"
categories = ["games"]
keywords = [
    "onlivfe",
    "social_vr",
    "social_platform",
    "social_network",
    "social",
]
edition = "2021"
publish = false

build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "onlivfe-desktop"
path = "gen/bin/desktop.rs"

[features]
default = ["desktop"]
desktop = ["dioxus-desktop"]
web = ["dioxus-web"]
mobile = []

[dependencies]
onlivfe = { path = "../core/onlivfe" }
onlivfe_wrapper = { path = "../core/onlivfe_wrapper" }
onlivfe_cache_store = { path = "../core/onlivfe_cache_store" }
strum = { version = "0.24.1" }

dioxus = "0.3"
dioxus-router = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
dioxus-mobile = { version = "0.3.0" }
mobile-entry-point = { version = "0.1.0" }

[target.'cfg(not(target_os = "android"))'.dependencies]
dioxus-desktop = { version = "0.3", optional = true }
dioxus-web = { version = "0.3.1", optional = true }

[profile.release]
# Optimizing mostly for size.
opt-level = "s"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[package.metadata.cargo-android]
app-activity-name = ".MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.4.0",
    "androidx.appcompat:appcompat:1.5.0",
    "com.google.android.material:material:1.6.1",
]
project-dependencies = ["org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"]
app-plugins = ["org.jetbrains.kotlin.android"]
app-permissions = ["android.permission.INTERNET"]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "com.onlivfe.app"
WRY_ANDROID_LIBRARY = "onlivfe_app"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/com/onlivfe"
